--- a/src/app/modals/clubs/modal-edit-club/modal-edit-club.component.html
+++ b/src/app/modals/clubs/modal-edit-club/modal-edit-club.component.html
@@ -13,7 +13,7 @@
                     </app-display-input-validation-message>
                 </div>
             </div>
-            <button type="submit" [disabled]="!clubForm.valid" class="btn-add">Agregar</button>
+            <button type="submit" [disabled]="!clubForm.valid" class="btn-add">Editar</button>
         </form>
     </div>
 </div>
