--- a/src/app/pages/manage-participant/manage-participant.component.html
+++ b/src/app/pages/manage-participant/manage-participant.component.html
@@ -2,6 +2,7 @@
     <app-sidebar style="display: contents;"></app-sidebar>
 
     <div class="box-content">
+        @if (!isLoading) {
         <h2>Gestion de participantes</h2>
 
         <div class="box-filters">
@@ -42,7 +43,37 @@
                 </tr>
             </tbody>
         </table>
+        <div class="box-paginator">
+            <ng-container *ngIf="numSequence(+pagination.last_page).length<=4">
+                <div *ngFor="let page of numSequence(+pagination.last_page); index as i" class="item-paginator"
+                    [ngStyle]="{'background-color': (i+1===pagination.current_page) ? '#1B84FF' : '#fff',
+                    'color': (i+1===pagination.current_page) ? '#fff' : '#000'}"
+                    (click)="i+1!==pagination.current_page?getParticipants(i+1):null">
+                    {{i+1}}
+                </div>
+            </ng-container>
+            <ng-container *ngIf="numSequence(+pagination.last_page).length>4">
+                <div *ngIf="pagination.current_page>1" class="item-paginator" [ngStyle]="{'background-color': '#fff',
+                'color': '#000'}" (click)="getParticipants(pagination.current_page-1)">
+                    {{pagination.current_page-1}}
+                </div>
+                <div class="item-paginator" [ngStyle]="{'background-color': '#fff',
+                    'color': '#000'}">
+                    {{pagination.current_page}}
+                </div>
+                <div *ngIf="pagination.current_page<pagination.last_page" class="item-paginator" [ngStyle]="{'background-color': '#fff',
+                'color': '#000'}" (click)="getParticipants(pagination.current_page+1)">
+                    {{pagination.current_page+1}}
+                </div>
+            </ng-container>
+        </div>
+        }
 
+        @if (isLoading){
+        <div class="general-box-loading">
+            <div *ngIf="isLoading" class="loader"></div>
+        </div>
+        }
     </div>
 </div>
 
