--- a/src/styles.css
+++ b/src/styles.css
@@ -18,3 +18,61 @@
     width: 100%;
     color: #DC2626;
 }
+
+.loader {
+    aspect-ratio: 1;
+    display: grid;
+    animation: l14 4s infinite;
+
+    width: 5rem;
+    position: absolute;
+    margin: auto;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+}
+
+.loader::before,
+.loader::after {
+    content: "";
+    grid-area: 1/1;
+    border: 8px solid;
+    border-radius: 50%;
+    border-color: red red #0000 #0000;
+    mix-blend-mode: darken;
+    animation: l14 1s infinite linear;
+}
+
+.loader::after {
+    border-color: #0000 #0000 blue blue;
+    animation-direction: reverse;
+}
+
+.general-box-loading {
+    position: relative;
+    width: 100%;
+    min-height: 90vh;
+}
+
+@keyframes l14 {
+    100% {
+        transform: rotate(1turn)
+    }
+}
+
+.box-paginator {
+    width: fit-content;
+    float: right;
+    right: 20px;
+    position: relative;
+    top: 5px;
+}
+
+.item-paginator {
+    display: inline-block;
+    padding: 10px 15px;
+    margin: 0 2px;
+    border-radius: 50%;
+    cursor: pointer;
+}
