--- a/src/app/modals/participant/modal-edit-participant/modal-edit-participant.component.css
+++ b/src/app/modals/participant/modal-edit-participant/modal-edit-participant.component.css
@@ -94,3 +94,9 @@
     transform: translateY(-5px);
     box-shadow: 0px 5px 15px rgba(0, 0, 0, 0.2);
 }
+
+.img-participant {
+    max-width: 75px;
+    display: block;
+    margin: auto;
+}
