--- a/src/app/pages/manage-centro-estudios/manage-centro-estudios.component.html
+++ b/src/app/pages/manage-centro-estudios/manage-centro-estudios.component.html
@@ -74,3 +74,5 @@
 </div>
 <app-modal-warning></app-modal-warning>
 <app-modal-add-centro-estudio></app-modal-add-centro-estudio>
+<app-modal-edit-centro-estudio></app-modal-edit-centro-estudio>
+<app-modal-delete-centro-estudio></app-modal-delete-centro-estudio>
