--- a/src/app/pages/manage-participant/manage-participant.component.css
+++ b/src/app/pages/manage-participant/manage-participant.component.css
@@ -68,6 +68,10 @@
     padding: 5px 0;
 }
 
+.box-table tbody tr:hover {
+    background-color: #F3F3F4;
+}
+
 .icon-delete {
     color: #DC2626;
     cursor: pointer;
