--- a/src/app/pages/manage-request-torneo/manage-request-torneo.component.css
+++ b/src/app/pages/manage-request-torneo/manage-request-torneo.component.css
@@ -52,6 +52,10 @@
     padding: 5px 0;
 }
 
+.box-table tbody tr:hover {
+    background-color: #F3F3F4;
+}
+
 .box-search-text {
     flex-basis: 80%;
     position: relative;
