--- a/src/app/pages/manage-user/manage-user.component.css
+++ b/src/app/pages/manage-user/manage-user.component.css
@@ -51,6 +51,10 @@
     padding: 5px 0;
 }
 
+.box-table tbody tr:hover {
+    background-color: #F3F3F4;
+}
+
 .icon-delete-user {
     color: #DC2626;
     cursor: pointer;
