--- a/src/app/components/sidebar/sidebar.component.html
+++ b/src/app/components/sidebar/sidebar.component.html
@@ -1,28 +1,32 @@
 <div class="box-sidebar">
-    <div class="sidebar-header">
-        <img src="/assets/img/logo.png" alt="">
-        <span class="greeting">Hola {{nameUserLogged}}</span>
-    </div>
-    <div routerLinkActive="active" class="item-menu" [routerLink]="['/manage-request-torneo']">
-        <span class="material-symbols-outlined">fact_check</span>
-        Gestionar solicitudes
-    </div>
-    <div routerLinkActive="active" class="item-menu" [routerLink]="['/manage-participants']">
-        <span class="material-symbols-outlined">fact_check</span>
-        Gestionar participantes
-    </div>
-    <div routerLinkActive="active" class="item-menu" [routerLink]="['/manage-clubs']">
-        <span class="material-symbols-outlined">fact_check</span>
-        Gestionar clubes
-    </div>
-    <div routerLinkActive="active" class="item-menu" [routerLink]="['/manage-centro-estudios']">
-        <span class="material-symbols-outlined">fact_check</span>
-        Gestionar centro estudios
-    </div>
-    <div *ngIf="+roleLogged===1" routerLinkActive="active" class="item-menu" [routerLink]="['/manage-users']">
-        <span class="material-symbols-outlined">fact_check</span>
-        Gestionar usuarios
-    </div>
+  <div class="sidebar-header">
+    <img src="/assets/img/logo.png" alt="">
+    <span class="greeting">Hola {{nameUserLogged}}</span>
+  </div>
+  <div routerLinkActive="active" class="item-menu" [routerLink]="['/manage-request-torneo']">
+    <span class="material-symbols-outlined">fact_check</span>
+    Gestionar solicitudes
+  </div>
+  <div routerLinkActive="active" class="item-menu" [routerLink]="['/manage-participants']">
+    <span class="material-symbols-outlined">display_settings</span>
+    Gestionar participantes
+  </div>
+  <div routerLinkActive="active" class="item-menu" [routerLink]="['/manage-clubs']">
+    <span class="material-symbols-outlined">display_settings</span>
+    Gestionar clubes
+  </div>
+  <div routerLinkActive="active" class="item-menu" [routerLink]="['/manage-centro-estudios']">
+    <span class="material-symbols-outlined">display_settings</span>
+    Gestionar centro estudios
+  </div>
+  <div routerLinkActive="active" class="item-menu" [routerLink]="['/manage-categorias']">
+    <span class="material-symbols-outlined">display_settings</span>
+    Gestionar categorias
+  </div>
+  <div *ngIf="+roleLogged===1" routerLinkActive="active" class="item-menu" [routerLink]="['/manage-users']">
+    <span class="material-symbols-outlined">display_settings</span>
+    Gestionar usuarios
+  </div>
 
-    <button class="btn-close-session" (click)="closeSession()">Cerrar sesión</button>
+  <button class="btn-close-session" (click)="closeSession()">Cerrar sesión</button>
 </div>
