--- a/src/app/pages/manage-categoria/manage-categoria.component.css
+++ b/src/app/pages/manage-categoria/manage-categoria.component.css
@@ -15,50 +15,10 @@
 .box-filters {
   display: flex;
   justify-content: space-between;
-  gap: 15px;
-}
-
-.btn-add-request {
-  cursor: pointer;
-  background-color: #487FFF;
-  color: #fff;
-  border: 0;
-  padding: 10px 15px;
-  transition: transform 0.2s ease, box-shadow 0.2s ease;
-}
-
-.btn-add-request:hover {
-  transform: translateY(-5px);
-  box-shadow: 0px 5px 15px rgba(0, 0, 0, 0.2);
-}
-
-.box-table {
-  text-align: left;
-  background: #fff;
-  padding: 0;
-}
-
-.box-table thead {
-  background: #F6F8FA;
-}
-
-.box-table thead th {
-  font-size: 18px;
-  padding: 10px 5px;
-  font-weight: bold;
-  text-wrap: nowrap;
-}
-
-.box-table tbody tr td {
-  padding: 5px 0;
-}
-
-.box-table tbody tr:hover {
-  background-color: #F3F3F4;
 }
 
 .box-search-text {
-  flex-grow: 1;
+  flex-basis: 80%;
   position: relative;
 }
 
@@ -74,18 +34,51 @@
   cursor: pointer;
 }
 
-.box-singular-item {
-  display: flex;
-  flex-direction: column;
-  position: relative;
-  flex-basis: 100px;
+.btn-add-club {
+  cursor: pointer;
+  background-color: #487FFF;
+  color: #fff;
+  border: 0;
+  padding: 10px 15px;
+  transition: transform 0.2s ease, box-shadow 0.2s ease;
 }
 
-.box-singular-item label {
-  position: absolute;
-  top: -20px;
+.btn-add-club:hover {
+  transform: translateY(-5px);
+  box-shadow: 0px 5px 15px rgba(0, 0, 0, 0.2);
 }
 
-.box-singular-item select {
-  flex-grow: 1;
+
+.box-table {
+  text-align: left;
+  background: #fff;
+  padding: 0;
+}
+
+.box-table thead {
+  background: #F6F8FA;
+}
+
+.box-table thead th {
+  font-size: 18px;
+  padding: 5px 0;
+  font-weight: bold;
+}
+
+.box-table tbody tr td {
+  padding: 5px 0;
+}
+
+.box-table tbody tr:hover {
+  background-color: #F3F3F4;
+}
+
+.icon-delete-club {
+  color: #DC2626;
+  cursor: pointer;
+  margin-left: 10px;
+}
+
+.icon-edit-club {
+  cursor: pointer;
 }
