--- a/src/app/pages/manage-request-torneo/manage-request-torneo.component.html
+++ b/src/app/pages/manage-request-torneo/manage-request-torneo.component.html
@@ -1,75 +1,85 @@
 <div class="box-main">
-    <app-sidebar style="display: contents;"></app-sidebar>
+  <app-sidebar style="display: contents;"></app-sidebar>
 
-    <div class="box-content">
-        @if (!isLoading) {
-        <h2>Gestion de solicitudes</h2>
+  <div class="box-content">
+    @if (!isLoading) {
+    <h2>Gestion de solicitudes</h2>
 
-        <div class="box-filters">
-            <div class="box-search-text">
-                <input [(ngModel)]="requestWanted" placeholder="Buscar requerimiento ..." type="text"
-                    class="input-search-text">
-                <span (click)="getRequestTorneo()" class="material-symbols-outlined search-btn">search</span>
-            </div>
-            <button (click)="openModalAddRequest()" class="btn-add-request">Agregar requerimiento</button>
-        </div>
-        <table class="box-table">
-            <thead>
-                <th>Nombre completo</th>
-                <th>Centro de estudios</th>
-                <th>Lugar de nacimiento</th>
-                <th>Dni</th>
-                <th>Celular</th>
-                <th>Acciones</th>
-            </thead>
-            <tbody>
-                <tr *ngFor="let request of requestsTorneo">
-                    <td>{{request.participant_nombres}} {{request.participant_apellido_paterno}}
-                        {{request.participant_apellido_materno}}</td>
-                    <td>{{request.centro_estudios}}</td>
-                    <td>{{request.lugar_nacimiento}}</td>
-                    <td>{{request.participant_dni}}</td>
-                    <td>{{request.participant_n_celular}}</td>
-                    <td>
-                        <a [href]="generatePdf(request.id)" target="_blank">
-                            <span class="material-symbols-outlined">picture_as_pdf</span>
-                        </a>
-                    </td>
-                </tr>
-            </tbody>
-        </table>
-        <div class="box-paginator">
-            <ng-container *ngIf="numSequence(+pagination.last_page).length<=4">
-                <div *ngFor="let page of numSequence(+pagination.last_page); index as i" class="item-paginator"
-                    [ngStyle]="{'background-color': (i+1===pagination.current_page) ? '#1B84FF' : '#fff',
-                            'color': (i+1===pagination.current_page) ? '#fff' : '#000'}"
-                    (click)="i+1!==pagination.current_page?getRequestTorneo(i+1):null">
-                    {{i+1}}
-                </div>
-            </ng-container>
-            <ng-container *ngIf="numSequence(+pagination.last_page).length>4">
-                <div *ngIf="pagination.current_page>1" class="item-paginator" [ngStyle]="{'background-color': '#fff',
-                        'color': '#000'}" (click)="getRequestTorneo(pagination.current_page-1)">
-                    {{pagination.current_page-1}}
-                </div>
-                <div class="item-paginator" [ngStyle]="{'background-color': '#fff',
-                            'color': '#000'}">
-                    {{pagination.current_page}}
-                </div>
-                <div *ngIf="pagination.current_page<pagination.last_page" class="item-paginator" [ngStyle]="{'background-color': '#fff',
-                        'color': '#000'}" (click)="getRequestTorneo(pagination.current_page+1)">
-                    {{pagination.current_page+1}}
-                </div>
-            </ng-container>
-        </div>
-        }
+    <div class="box-filters">
+      <div class="box-search-text">
+        <input [(ngModel)]="requestWanted" placeholder="Buscar requerimiento ..." type="text" class="input-search-text">
+        <span (click)="getRequestTorneo()" class="material-symbols-outlined search-btn">search</span>
+      </div>
 
-        @if (isLoading){
-        <div class="general-box-loading">
-            <div *ngIf="isLoading" class="loader"></div>
-        </div>
-        }
+      <div class="box-singular-item">
+        <label>Categoría</label>
+
+        <select (change)="onSelect($event,'category')">
+          <option value=""></option>
+          <option *ngFor="let category of categories" [value]="category.id">
+            {{category.name}}
+          </option>
+        </select>
+      </div>
+
+      <button (click)="openModalAddRequest()" class="btn-add-request">Agregar requerimiento</button>
     </div>
+    <table class="box-table">
+      <thead>
+        <th>Nombre completo</th>
+        <th>Categoría</th>
+        <th>Centro de estudios</th>
+        <th>Dni</th>
+        <th>Celular</th>
+        <th>Acciones</th>
+      </thead>
+      <tbody>
+        <tr *ngFor="let request of requestsTorneo">
+          <td>{{request.participant_nombres}} {{request.participant_apellido_paterno}}
+            {{request.participant_apellido_materno}}</td>
+          <td>{{request.category_name}}</td>
+          <td>{{request.centro_estudios_nombre}}</td>
+          <td>{{request.participant_dni}}</td>
+          <td>{{request.participant_n_celular}}</td>
+          <td>
+            <a [href]="generatePdf(request.id)" target="_blank">
+              <span class="material-symbols-outlined">picture_as_pdf</span>
+            </a>
+          </td>
+        </tr>
+      </tbody>
+    </table>
+    <div class="box-paginator">
+      <ng-container *ngIf="numSequence(+pagination.last_page).length<=4">
+        <div *ngFor="let page of numSequence(+pagination.last_page); index as i" class="item-paginator" [ngStyle]="{'background-color': (i+1===pagination.current_page) ? '#1B84FF' : '#fff',
+                            'color': (i+1===pagination.current_page) ? '#fff' : '#000'}"
+          (click)="i+1!==pagination.current_page?getRequestTorneo(i+1):null">
+          {{i+1}}
+        </div>
+      </ng-container>
+      <ng-container *ngIf="numSequence(+pagination.last_page).length>4">
+        <div *ngIf="pagination.current_page>1" class="item-paginator" [ngStyle]="{'background-color': '#fff',
+                        'color': '#000'}" (click)="getRequestTorneo(pagination.current_page-1)">
+          {{pagination.current_page-1}}
+        </div>
+        <div class="item-paginator" [ngStyle]="{'background-color': '#fff',
+                            'color': '#000'}">
+          {{pagination.current_page}}
+        </div>
+        <div *ngIf="pagination.current_page<pagination.last_page" class="item-paginator" [ngStyle]="{'background-color': '#fff',
+                        'color': '#000'}" (click)="getRequestTorneo(pagination.current_page+1)">
+          {{pagination.current_page+1}}
+        </div>
+      </ng-container>
+    </div>
+    }
+
+    @if (isLoading){
+    <div class="general-box-loading">
+      <div *ngIf="isLoading" class="loader"></div>
+    </div>
+    }
+  </div>
 </div>
 
 <app-modal-add-request-torneo></app-modal-add-request-torneo>
