--- a/src/app/components/sidebar/sidebar.component.html
+++ b/src/app/components/sidebar/sidebar.component.html
@@ -2,6 +2,7 @@
   <div class="sidebar-header">
     <img src="/assets/img/logo.png" alt="">
     <span class="greeting">Hola {{nameUserLogged}}</span>
+    <span class="region">Región: {{regionLogged}}</span>
   </div>
   <div routerLinkActive="active" class="item-menu" [routerLink]="['/manage-request-torneo']">
     <span class="material-symbols-outlined">fact_check</span>
