--- a/src/app/components/sidebar/sidebar.component.css
+++ b/src/app/components/sidebar/sidebar.component.css
@@ -1,4 +1,5 @@
 .box-sidebar {
+  flex-shrink: 0;
   position: relative;
   flex-basis: 260px;
   background: #063970;
@@ -65,7 +66,7 @@
   font-weight: 700;
 }
 
-@media (max-width: 768px) {
+@media (max-width: 1050px) {
   .box-sidebar {
     display: none;
   }
