--- a/src/app/pages/manage-request-torneo/manage-request-torneo.component.css
+++ b/src/app/pages/manage-request-torneo/manage-request-torneo.component.css
@@ -32,31 +32,6 @@
   box-shadow: 0px 5px 15px rgba(0, 0, 0, 0.2);
 }
 
-.box-table {
-  text-align: left;
-  background: #fff;
-  padding: 0;
-}
-
-.box-table thead {
-  background: #F6F8FA;
-}
-
-.box-table thead th {
-  font-size: 18px;
-  padding: 10px 5px;
-  font-weight: bold;
-  text-wrap: nowrap;
-}
-
-.box-table tbody tr td {
-  padding: 5px 0;
-}
-
-.box-table tbody tr:hover {
-  background-color: #F3F3F4;
-}
-
 .box-search-text {
   flex-grow: 1;
   position: relative;
@@ -89,4 +64,86 @@
 
 .box-singular-item select {
   flex-grow: 1;
+}
+
+/* Contenedor de la tabla: define altura y scroll vertical */
+.table-container {
+  max-height: 300px;
+  /* altura fija del body */
+  overflow-y: auto;
+  /* scroll sólo en el cuerpo */
+  border: 1px solid #ccc;
+}
+
+/* La tabla ocupa 100% del contenedor, y usamos table-layout: fixed para que respete los anchos */
+table {
+  width: 100%;
+  border-collapse: collapse;
+  table-layout: fixed;
+}
+
+/* Estilos generales de celdas */
+th,
+td {
+  padding: 8px;
+  border: 1px solid #ddd;
+  white-space: nowrap;
+  /* evita que el texto salte a otra línea */
+  overflow: hidden;
+  text-overflow: ellipsis;
+  /* “…” si el texto es muy largo */
+}
+
+/* Encabezado fijo */
+thead th {
+  position: sticky;
+  top: 0;
+  background: #f5f5f5;
+  z-index: 2;
+}
+
+
+@media (max-width: 790px) {
+  .field-centro-estudios {
+    display: none;
+  }
+}
+
+@media (max-width: 670px) {
+  .box-filters {
+    flex-wrap: wrap;
+    gap: 5px;
+  }
+
+  .box-search-text {
+    flex-basis: 100%;
+    height: 43px;
+    margin-bottom: 20px;
+  }
+
+  .box-category {
+    flex-grow: 1;
+  }
+
+  .box-excel {
+    flex-basis: 45px;
+  }
+}
+
+@media (max-width: 625px) {
+  .field-region {
+    display: none;
+  }
+}
+
+@media (max-width: 550px) {
+  .field-dni {
+    display: none;
+  }
+}
+
+@media (max-width: 450px) {
+  .field-celular {
+    display: none;
+  }
 }
